--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-    <title>Chen Gu SDE</title>
+    <title>Chen Gu | SDE</title>
   </head>
 
   <body>
